--- a/writr/Makefile
+++ b/writr/Makefile
@@ -1,22 +1,16 @@
 FLAG = --onefile
 APPNAME = writr
 
-install: build move clean
+install: copy clean
 
-build: main.py
-	pyinstaller $(FLAG) main.py
-
-move:
-	@mv dist/main ~/.bin/$(APPNAME)
+copy: main.py
+	@cp main.py ~/.bin/$(APPNAME)
 
 clean:
-	@if [ -a build ]; then rm -r build; fi
-	@if [ -a dist ]; then rm -r dist; fi
-	@if [ -a main.spec ]; then rm -r main.spec; fi
 	@if [ -a __pycache__ ]; then rm -r __pycache__; fi
 
 uninstall:
 	@rm ~/.bin/$(APPNAME)
 
 edit:
-	nvim -p main.py writercore.py utils.py colors.py
+	nvim -p main.py colors.py
