--- a/puta/pyrightconfig.json
+++ b/puta/pyrightconfig.json
@@ -1,1 +1,1 @@
-{"executionEnvironments": [{"root": "."}]}
+{"executionEnvironments": [{"root": "."}], "typeCheckingMode": "basic", "reportMissingModuleSource": "none"}
