--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,7 @@ __pycache__/**
 puta/NewBeginningsInJapan.zip
 puta/NewBeginningsInJapan2.zip
 puta/NewBeginningsInJapan/**
+puta/backup.zip
+puta/GoodGirlGoneBad/**
 dler/downloads/**
 archives/**
