--- a/splitr/pyrightconfig.json
+++ b/splitr/pyrightconfig.json
@@ -1,5 +1,1 @@
-{
-    "executionEnvironments": [
-        {"root": "."}
-    ]
-}
+{"executionEnvironments": [{"root": "."}], "typeCheckingMode": "basic", "reportMissingModuleSource": "none"}
